[package]
name = "channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.7.1"
async-priority-channel = "0.1.0"
atomic_mpmc = "0.2.0"
broadcaster = "1.0.0"
crossfire = "0.1.7"
flume = "0.10.14"
futures = "0.3.24"
futures-channel = "0.3.24"
futures-util = "0.3.24"
tokio = { version = "1.21.2", features = ["full"] }
