[package]
name = "process"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "1.5.0"
easy_process = "0.2.1"
futures-lite = "1.12.0"
process_control = "4.0.0"
smol = "1.2.5"
subprocess = "0.2.9"
