[package]
name = "special"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-lock = "2.5.0"
async-oneshot = "0.5.0"
atomic_float = "0.1.0"
awaitgroup = "0.6.0"
catty = "0.1.5"
concurrent-queue = "1.2.4"
dashmap = "5.4.0"
event-listener = "2.5.3"
evmap = "10.0.2"
flurry = "0.4.0"
oneshot = "0.1.5"
portable-atomic = { version = "0.3", features=["float"] }
process_lock = "0.1.0"
scc = "0.11.1"
sharded-slab = "0.1.4"
simple-mutex = "1.1.5"
slab = "0.4.7"
smol = "1.2.5"
triggered = "0.1.2"
triple_buffer = "6.2.0"
try-lock = "0.2.3"
waitgroup = "0.1.2"
wg = "0.3.1"
