[package]
name = "special"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6.0"
async-lock = "2.5.0"
async-oneshot = "0.5.0"
async-weighted-semaphore = "0.2.1"
async_singleflight = "0.5.0"
atomic-waker = "1.1.2"
atomic_float = "0.1.0"
atomicbox = "0.4.0"
atomig = "0.4.0"
awaitgroup = "0.6.0"
barrage = "0.2.3"
catty = "0.1.5"
concurrent-queue = "1.2.4"
crossbeam-utils = "0.8.14"
dashmap = "5.4.0"
event-listener = "2.5.3"
evmap = "10.0.2"
flurry = "0.4.0"
futures = "0.3.25"
oneshot = "0.1.5"
portable-atomic = { version = "0.3", features=["float"] }
process_lock = "0.1.0"
scc = "1.5.0"
sharded-slab = "0.1.4"
simple-mutex = "1.1.5"
singleflight = "0.2.0"
singleflight-async = "0.1.1"
slab = "0.4.7"
smol = "1.2.5"
sync_cow = "0.1.1"
tokio = { version = "1.21.2", features = ["full"] }
triggered = "0.1.2"
triple_buffer = "6.2.0"
try-lock = "0.2.3"
waitgroup = "0.1.2"
wg = "0.3.1"
