[package]
name = "timer_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-io = "2.1.0"
chrono = "0.4.22"
futures-lite = "2.0.0"
futures-timer = "3.0.2"
safina-timer = "0.1.11"
smol = "1.2.5"
ticker = "0.1.1"
timer = "0.2.0"
